refactor: Mejora la implementación del patrón State en la gestión de envíos, y mejoras en el envioService [Marcos]