@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -26,85 +25,55 @@ public class EnvioService {
     private final HistorialEstadoEnvioRepository historialEstadoEnvioRepository;
     private final ClienteRepository clienteRepository;
 
-    public EnvioService(EnvioRepository envioRepository, HistorialEstadoEnvioRepository historialEstadoEnvioRepository, ClienteRepository clienteRepository) {
+    public EnvioService(EnvioRepository envioRepository,
+                        HistorialEstadoEnvioRepository historialEstadoEnvioRepository,
+                        ClienteRepository clienteRepository) {
         this.envioRepository = envioRepository;
         this.historialEstadoEnvioRepository = historialEstadoEnvioRepository;
         this.clienteRepository = clienteRepository;
     }
 
     /* =====================
-       CREAR ENVIO
+       CREAR ENVÍO
        ===================== */
     @Transactional
     public EnvioDTO crearEnvio(EnvioDTO dto) {
         log.info("Iniciando creación de envío para remitente: {}", dto.getRemitente());
+        Envio envio = ensamblarEnvio(dto);
 
-        // Buscar clientes existentes por documento o CUIT
-        String docRemitente = dto.getRemitente().getDocumentoOCuit();
-        String docDestinatario = dto.getDestinatario().getDocumentoOCuit();
-
-        Cliente remitente = clienteRepository.findByDocumentoOCuitIgnoreCase(docRemitente)
-                .orElseThrow(() -> new IllegalArgumentException(
-                        "Remitente no encontrado con documento o CUIT: " + docRemitente));
-
-        Cliente destinatario = clienteRepository.findByDocumentoOCuitIgnoreCase(docDestinatario)
-                .orElseThrow(() -> new IllegalArgumentException(
-                        "Destinatario no encontrado con documento o CUIT: " + docDestinatario));
-
-        // Construir el envío (sin crear nuevos clientes)
-        Envio envio = EnvioMapper.toEntity(dto);
-        envio.setRemitente(remitente);
-        envio.setDestinatario(destinatario);
-
-        // Validaciones
         validarPaquetes(envio);
         detectarRefrigerado(envio);
         inicializarEnvio(envio);
-
-        // Guardar en base de datos
         envio = envioRepository.save(envio);
-        log.info("Envío guardado exitosamente con ID: {} y código: {}", envio.getId(), envio.getCodigoUnico());
 
-        // Registrar historial inicial
         registrarHistorialInicial(envio);
-        log.info("Historial inicial registrado para el envío con código: {}", envio.getCodigoUnico());
 
+        log.info("Envío creado correctamente con código: {}", envio.getCodigoUnico());
         return EnvioMapper.toDTO(envio);
     }
 
     /* =====================
-       BUSQUEDAS
+       BÚSQUEDAS
        ===================== */
-
     public List<EnvioDTO> listarPorRemitente(String documentoOCuit) {
-        log.info("Listando envios del remitente con documento/CUIT: {}", documentoOCuit);
         return envioRepository.findByRemitente_DocumentoOCuitIgnoreCase(documentoOCuit)
-                .stream()
-                .map(EnvioMapper::toDTO)
-                .collect(Collectors.toList());
+                .stream().map(EnvioMapper::toDTO).toList();
     }
 
     public List<EnvioDTO> listarPorDestinatario(String documentoOCuit) {
-        log.info("Listando envios del destinatario con documento/CUIT: {}", documentoOCuit);
         return envioRepository.findByDestinatario_DocumentoOCuitIgnoreCase(documentoOCuit)
-                .stream()
-                .map(EnvioMapper::toDTO)
-                .collect(Collectors.toList());
+                .stream().map(EnvioMapper::toDTO).toList();
     }
 
     public List<EnvioDTO> listarPorEstado(EstadoEnvio estado) {
-        log.info("Listando envios por estado: {}", estado);
         return envioRepository.findByEstado(estado)
-                .stream()
-                .map(EnvioMapper::toDTO)
-                .collect(Collectors.toList());
+                .stream().map(EnvioMapper::toDTO).toList();
     }
 
     @Transactional(readOnly = true)
     public EnvioDTO obtenerEnvioPorCodigo(String codigoUnico) {
         Envio envio = envioRepository.findByCodigoUnico(codigoUnico)
                 .orElseThrow(() -> new IllegalArgumentException("No se encontró un envío con el código: " + codigoUnico));
-
         return EnvioMapper.toDTO(envio);
     }
 
@@ -112,168 +81,87 @@ public class EnvioService {
     public List<HistorialEstadoEnvio> obtenerHistorialPorCodigo(String codigoUnico) {
         Envio envio = envioRepository.findByCodigoUnico(codigoUnico)
                 .orElseThrow(() -> new IllegalArgumentException("No se encontró un envío con el código: " + codigoUnico));
-
         return historialEstadoEnvioRepository.findByEnvio(envio);
     }
 
-
     /* =====================
-       CAMBIO DE ESTADO
+       CAMBIO DE ESTADO (Patrón STATE)
        ===================== */
+
     @Transactional
     public void avanzarEstado(Long envioId, String observacion) {
-        log.info("Intentando avanzar estado del envio con ID: {}", envioId);
-
-        Envio envio = envioRepository.findById(envioId)
-                .orElseThrow(() -> {
-                    log.warn("Envio con ID {} no encontrado al intentar avanzar estado", envioId);
-                    return new RuntimeException("Envio no encontrado");
-                });
-
-        EstadoEnvio estadoAnterior = envio.getEstado();
-
-        try {
-            EstadoEnvioState estadoActual = EstadoEnvioFactory.getEstado(estadoAnterior);
-            estadoActual.avanzar(envio);
-
-            EstadoEnvio nuevoEstado = envio.getEstado();
-            envioRepository.save(envio);
-
-            registrarHistorial(envio, estadoAnterior, nuevoEstado, observacion);
-            log.info("Envio {} avanzo de {} a {}", envio.getCodigoUnico(), estadoAnterior, nuevoEstado);
-        } catch (Exception e) {
-            log.error("Error al avanzar estado del Envio {}: {}", envio.getCodigoUnico(), e.getMessage());
-            throw e;
-        }
+        Envio envio = obtenerEnvioPorId(envioId);
+        EstadoEnvioState estado = EstadoEnvioFactory.getEstado(envio.getEstado());
+        estado.avanzar(envio, historialEstadoEnvioRepository, observacion);
+        envioRepository.save(envio);
+        log.info("Envío {} avanzó correctamente al estado {}", envio.getCodigoUnico(), envio.getEstado());
     }
 
     @Transactional
     public void cancelarEnvio(Long envioId, String observacion) {
-        log.info("Intentando cancelar el envio con ID: {}", envioId);
-
-        Envio envio = envioRepository.findById(envioId)
-                .orElseThrow(() -> {
-                    log.warn("Envio con ID {} no encontrado al intentar cancelar", envioId);
-                    return new RuntimeException("Envio no encontrado");
-                });
-
-        EstadoEnvio estadoAnterior = envio.getEstado();
-
-        try {
-            EstadoEnvioState estadoActual = EstadoEnvioFactory.getEstado(estadoAnterior);
-            estadoActual.cancelar(envio);
-
-            EstadoEnvio nuevoEstado = envio.getEstado();
-            envioRepository.save(envio);
-
-            registrarHistorial(envio, estadoAnterior, nuevoEstado, observacion);
-            log.info("Envio {} cancelado correctamente. Estado previo: {}, estado nuevo: {}", envio.getCodigoUnico(), estadoAnterior, nuevoEstado);
-        } catch (Exception e) {
-            log.error("Error al cancelar envio {}: {}", envio.getCodigoUnico(), e.getMessage());
-            throw e;
-        }
+        Envio envio = obtenerEnvioPorId(envioId);
+        EstadoEnvioState estado = EstadoEnvioFactory.getEstado(envio.getEstado());
+        estado.cancelar(envio, historialEstadoEnvioRepository, observacion);
+        envioRepository.save(envio);
+        log.info("Envío {} fue cancelado. Estado final: {}", envio.getCodigoUnico(), envio.getEstado());
     }
 
     @Transactional
     public void devolverEnvio(Long envioId, String observacion) {
-        log.info("Intentando devolver el envio con ID: {}", envioId);
-
-        Envio envio = envioRepository.findById(envioId)
-                .orElseThrow(() -> {
-                    log.warn("Envio con ID {} no encontrado al intentar devolver", envioId);
-                    return new RuntimeException("Envio no encontrado");
-                });
-
-        EstadoEnvio estadoAnterior = envio.getEstado();
-
-        try {
-            EstadoEnvioState estadoActual = EstadoEnvioFactory.getEstado(estadoAnterior);
-            estadoActual.devolver(envio);
-
-            EstadoEnvio nuevoEstado = envio.getEstado();
-            envioRepository.save(envio);
-
-            registrarHistorial(envio, estadoAnterior, nuevoEstado, observacion);
-            log.info("Envio {} devuelto correctamente. Estado previo: {}, estado nuevo: {}", envio.getCodigoUnico(), estadoAnterior, nuevoEstado);
-        } catch (Exception e) {
-            log.error("Error al devolver envio {}: {}", envio.getCodigoUnico(), e.getMessage());
-            throw e;
-        }
+        Envio envio = obtenerEnvioPorId(envioId);
+        EstadoEnvioState estado = EstadoEnvioFactory.getEstado(envio.getEstado());
+        estado.devolver(envio, historialEstadoEnvioRepository, observacion);
+        envioRepository.save(envio);
+        log.info("Envío {} fue devuelto. Estado final: {}", envio.getCodigoUnico(), envio.getEstado());
     }
 
     @Transactional
     public void adjuntarComprobante(Long envioId, String comprobante) {
-        log.info("Intentando adjuntar comprobante al envio con ID: {}", envioId);
+        Envio envio = obtenerEnvioPorId(envioId);
 
-        Envio envio = envioRepository.findById(envioId)
-                .orElseThrow(() -> new RuntimeException("Envio no encontrado"));
-
-        // Validar comprobante no vacío
         if (comprobante == null || comprobante.isBlank()) {
-            throw new IllegalArgumentException("El comprobante no puede estar vacio.");
+            throw new IllegalArgumentException("El comprobante no puede estar vacío.");
         }
 
-        // Validar que no se pueda adjuntar si ya está entregado o cancelado
         if (envio.getEstado() == EstadoEnvio.ENTREGADO || envio.getEstado() == EstadoEnvio.CANCELADO) {
-            throw new IllegalStateException("No se puede adjuntar un comprobante a un envio entregado o cancelado.");
+            throw new IllegalStateException("No se puede adjuntar comprobante a un envío entregado o cancelado.");
         }
 
         envio.setComprobanteEntrega(comprobante);
         envioRepository.save(envio);
 
-        log.info("Comprobante adjuntado correctamente al envio {}", envio.getCodigoUnico());
+        log.info("Comprobante adjuntado correctamente al envío {}", envio.getCodigoUnico());
     }
 
     /* =====================
-       VALIDACIONES
+       VALIDACIONES Y UTILIDADES
        ===================== */
 
-    private void registrarHistorial(Envio envio, EstadoEnvio anterior, EstadoEnvio nuevo, String observacion) {
-        log.debug("Registrando historial para envio {}. Estado anterior: {}, nuevo estado: {}", envio.getCodigoUnico(), anterior, nuevo);
-
-        HistorialEstadoEnvio historial = HistorialEstadoEnvio.builder()
-                .envio(envio)
-                .estadoAnterior(anterior)
-                .estadoNuevo(nuevo)
-                .fechaHora(LocalDateTime.now())
-                .observacion(observacion)
-                .build();
-
-        historialEstadoEnvioRepository.save(historial);
-        log.info("Historial registrado para envio {} con nuevo estado {}", envio.getCodigoUnico(), nuevo);
+    private Envio obtenerEnvioPorId(Long id) {
+        return envioRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Envío no encontrado con ID: " + id));
     }
 
     private void validarPaquetes(Envio envio) {
-        for (Paquete paquete : envio.getPaquetes()) {
-            if (paquete.getPesoKg() == null || paquete.getPesoKg() <= 0) {
-                log.error("Peso invalido para paquete {}", paquete.getCodigo());
-                throw new IllegalArgumentException("Peso invalido para el paquete: " + paquete.getCodigo());
-            }
-            if (paquete.getVolumenDm3() == null || paquete.getVolumenDm3() <= 0) {
-                log.error("Volumen invalido para paquete {}", paquete.getCodigo());
-                throw new IllegalArgumentException("Volumen invalido para el paquete: " + paquete.getCodigo());
-            }
+        for (Paquete p : envio.getPaquetes()) {
+            if (p.getPesoKg() == null || p.getPesoKg() <= 0)
+                throw new IllegalArgumentException("Peso inválido en paquete " + p.getCodigo());
+            if (p.getVolumenDm3() == null || p.getVolumenDm3() <= 0)
+                throw new IllegalArgumentException("Volumen inválido en paquete " + p.getCodigo());
         }
-        log.info("Todos los paquetes del envio {} son validos", envio.getCodigoUnico());
+        log.debug("Validando paquetes...");
     }
 
     private void detectarRefrigerado(Envio envio) {
-        boolean requiereFrio = false;
-
-        for (Paquete paquete : envio.getPaquetes()) {
-            if (paquete instanceof PaqueteRefrigerado) {
-                requiereFrio = true;
-                break;
-            }
-        }
+        boolean requiereFrio = envio.getPaquetes().stream().anyMatch(PaqueteRefrigerado.class::isInstance);
         envio.setRequiereFrio(requiereFrio);
-        log.info("El envio {} {}", envio.getCodigoUnico(), requiereFrio ? "requiere refrigeracion" : "no requiere refrigeracion");
+        log.debug("Detectando si es refrigerado...");
     }
 
     private void inicializarEnvio(Envio envio) {
         envio.setEstado(EstadoEnvio.GENERADO);
         envio.setCodigoUnico(UUID.randomUUID().toString());
-        log.debug("Envio inicializado con estado GENERADO y codigo: {}", envio.getCodigoUnico());
+        log.debug("Inicializando estado del envío...");
     }
 
     private void registrarHistorialInicial(Envio envio) {
@@ -282,10 +170,20 @@ public class EnvioService {
                 .estadoAnterior(null)
                 .estadoNuevo(EstadoEnvio.GENERADO)
                 .fechaHora(LocalDateTime.now())
-                .observacion("Envio creado")
+                .observacion("Envío creado")
                 .build());
 
-        log.info("Historial inicial creado para envio con codigo: {}", envio.getCodigoUnico());
     }
+    private Envio ensamblarEnvio(EnvioDTO dto) {
+        Cliente remitente = clienteRepository.findByDocumentoOCuitIgnoreCase(dto.getRemitente().getDocumentoOCuit())
+                .orElseThrow(() -> new IllegalArgumentException("Remitente no encontrado"));
+        Cliente destinatario = clienteRepository.findByDocumentoOCuitIgnoreCase(dto.getDestinatario().getDocumentoOCuit())
+                .orElseThrow(() -> new IllegalArgumentException("Destinatario no encontrado"));
 
+        Envio envio = EnvioMapper.toEntity(dto);
+        envio.setRemitente(remitente);
+        envio.setDestinatario(destinatario);
+
+        return envio;
+    }
 }
